Fri Sep 23 20:36:05 2016  Shugo Maeda  <shugo@ruby-lang.org>

	* eval.c (rb_mod_refine): refine modules as well.
	  [ruby-core:76199] [Feature #12534]

Fri Sep 23 20:19:09 2016  Akinori MUSHA  <knu@iDaemons.org>

	* man/ruby.1: Update the paragraphs in "Rich Libraries" which
	  included a dead link.

Fri Sep 23 20:05:27 2016  Akinori MUSHA  <knu@iDaemons.org>

	* man/ruby.1, man/erb.1, man/irb.1, man/ri.1: Use the `Lk` macro
	  for hyperlinks, which has been available since mdocml 1.5.1
	  (released more than seven years ago).

Fri Sep 23 15:47:04 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/forwardable.rb (_delegator_method): allow private methods to
	  be delegated, with warnings.  [ruby-core:77341] [Bug #12782]

Fri Sep 23 12:15:29 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_peephole_optimize): enable tail call
	  optimization inside a conditional block.

Thu Sep 22 13:00:04 2016  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* gc.c (gc_start_internal): [DOC] methods without arguments
	  like r56194. [Bug #12777]

Wed Sep 21 17:43:53 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* process.c (InitVM_process): Support CLOCK_MONOTONIC_RAW_APPROX,
	  CLOCK_UPTIME_RAW, and CLOCK_UPTIME_RAW_APPROX which are introduced
	  by macOS 10.12.

Wed Sep 21 13:47:33 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (brace_body, do_body): preserve cmdarg_stack so that
	  `do` after cmdarg in a block should be `do_block` and bound to
	  the outer method.  [ruby-core:72482] [Bug #11873]

	* parse.y: `do` after cmdarg in parentheses should be `do_block`
	  and bound to the outer method.  [ruby-core:72482] [Bug #11873]

	* parse.y (brace_body, do_body): extract block bodies.

Tue Sep 20 23:02:50 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (gc_start_internal): [DOC] add ObjectSpace.garbage_collect
	  and fix GC#garbage_collect.  [Bug #12777]

Tue Sep 20 21:24:01 2016  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
